--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -11,32 +11,30 @@
     </Window.Background>
     <Grid>
         <Grid Margin="120,73,65,35" x:Name="MPSlider" Width="350" Height="30">
-            <Image x:Name="MPBar" HorizontalAlignment="Left" Height="30" VerticalAlignment="Top" Width="350" Margin="0,0,-2,0" Source="Mana.png"/>
+            <Image x:Name="MPBar" HorizontalAlignment="Left" Height="31" VerticalAlignment="Top" Width="352" Source="Mana.png" Margin="-2,0,0,-1"/>
         </Grid>
-        <Label x:Name="MPStat" Margin="305,209,670,24" FontFamily="Impact" FontSize="24" RenderTransformOrigin="0.114,-0.34" Content="100/100"/>
-        <Grid>
-            <Label x:Name="MPAt" Content="At" HorizontalAlignment="Left" Margin="191,113,0,2" Width="22" Foreground="White"/>
-            <Label x:Name="MPMax" Content="Max&#xD;&#xA;" HorizontalAlignment="Left" Margin="265,109,0,0" VerticalAlignment="Top" Height="29" Foreground="White"/>
-            <TextBox x:Name="MPAtBox" HorizontalAlignment="Left" Height="23" Margin="211,113,0,0" TextWrapping="Wrap" Text="100" VerticalAlignment="Top" Width="51" Background="#FF494D4C"/>
-            <TextBox x:Name="MPMaxBox" HorizontalAlignment="Left" Height="23" Margin="302,113,0,0" TextWrapping="Wrap" Text="100" VerticalAlignment="Top" Width="51" Background="#FF494D4C"/>
+        <Label x:Name="MPStat" Margin="125,98,319,6" FontFamily="Impact" FontSize="17.333" RenderTransformOrigin="0.114,-0.34" Content="100/100" Foreground="#FFACACAC"/>
+        <Grid Margin="284,110,195,14">
+            <TextBox x:Name="MPAtBox" HorizontalAlignment="Left" TextWrapping="Wrap" Text="100" Width="22" Background="#FF494D4C" Height="14" VerticalAlignment="Top" Margin="0,0,0,-1" FontSize="9.333"/>
+            <TextBox x:Name="MPMaxBox" HorizontalAlignment="Left" Height="14" Margin="24,0,0,0" TextWrapping="Wrap" Text="100" VerticalAlignment="Top" Width="22" Background="#FF494D4C" FontSize="9.333"/>
         </Grid>
 
         <Button x:Name="Close" Content="X" HorizontalAlignment="Left" Margin="10,8,0,0" VerticalAlignment="Top" Background="#FF494D4C" Foreground="White" BorderBrush="#FF494D4C"/>
 
         <Grid Margin="120,33,0,0" x:Name="HPSlider" Width="410" Height="32" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <Image x:Name="HPBar" HorizontalAlignment="Left" Height="30" VerticalAlignment="Top" Width="410" Margin="0,2,0,0" RenderTransformOrigin="0.5,0.5" Source="HP.png"/>
+            <Image x:Name="HPBar" HorizontalAlignment="Left" Height="30" VerticalAlignment="Top" Width="411" Margin="-1,2,0,0" RenderTransformOrigin="0.5,0.5" Source="HP.png"/>
         </Grid>
-        <Label x:Name="HPStat" Content="100/100" Margin="305,28,670,213" FontFamily="Impact" FontSize="24" RenderTransformOrigin="0.114,-0.34"/>
-        <Grid x:Name="HPMaxMin">
-            <Label x:Name="HPAt" Content="At" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="197,0,0,0" Background="#00000000" Foreground="White"/>
-            <Label x:Name="HPMax" Content="Max&#xD;&#xA;" HorizontalAlignment="Left" Margin="283,0,0,0" VerticalAlignment="Top" Height="29" Foreground="White"/>
-            <TextBox x:Name="HPAtBox" HorizontalAlignment="Left" Height="23" Margin="227,3,0,0" TextWrapping="Wrap" Text="100" VerticalAlignment="Top" Width="51" Background="#FF494D4C"/>
-            <TextBox x:Name="HPMaxBox" HorizontalAlignment="Left" Height="23" Margin="315,3,0,0" TextWrapping="Wrap" Text="100" VerticalAlignment="Top" Width="51" Background="#FF494D4C"/>
+        <Label x:Name="HPStat" Content="100/100" Margin="125,7,321,97" FontFamily="Impact" FontSize="17.333" RenderTransformOrigin="0.114,-0.34" Foreground="#FFACACAC"/>
+        <Grid x:Name="HPMaxMin" Margin="236,109,243,14">
+            <TextBox x:Name="HPAtBox" HorizontalAlignment="Left" Margin="0,1,0,0" TextWrapping="Wrap" Text="100" Width="22" Background="#FF494D4C" FontSize="9.333"/>
+            <TextBox x:Name="HPMaxBox" HorizontalAlignment="Left" Height="14" Margin="24,1,0,0" TextWrapping="Wrap" Text="100" VerticalAlignment="Top" Width="22" Background="#FF494D4C" FontSize="9.333"/>
         </Grid>
 
         <Grid x:Name="Level" Margin="0,0,-1,0">
-            <Label x:Name="LevelLabel" Content="1" HorizontalAlignment="Left" Margin="55,42,0,0" VerticalAlignment="Top" Height="48" Width="57" FontFamily="Segoe UI Black" FontSize="32" FontWeight="Bold" FontStyle="Italic" Foreground="#FF00FFAE"/>
+            <Label x:Name="LevelLabel" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="1" HorizontalAlignment="Left" Margin="54,37,0,0" VerticalAlignment="Top" Height="58" Width="58" FontFamily="Segoe UI Black" FontSize="37.333" FontStyle="Italic" Foreground="White" FontWeight="Bold" RenderTransformOrigin="0.5,0.5"/>
+
             <TextBox x:Name="LevelBox" HorizontalAlignment="Left" Height="24" Margin="10,58,0,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="26" Background="#FF494D4C" BorderBrush="#FF747474"/>
+            <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="31" Margin="209,5,0,0" TextWrapping="Wrap" Text="Name" VerticalAlignment="Top" Width="323" Background="{x:Null}" BorderBrush="{x:Null}" SelectionBrush="{x:Null}" Foreground="White" FontFamily="Beleren" FontSize="24"/>
         </Grid>
     </Grid>
 </Window>
